2006-09-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement basic soft BP support for debugWire:
	* src/jtag2.h: add a soft BP cache, and updateBreakpintsDW().
	* src/jtag2bp.cc: Implement updateBreakpintsDW().

2006-09-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/devdescr.xsl: (New file.) Generate devdescr.cc
	entry out of the XML file.
	* src/devdescr.cc: Add entries for all debugWire AVRs,
	generated with devdescr.xsl.

2006-09-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtaggeneric.cc: Initialize is_usb properly when
	creating a new "jtag" object.

2006-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/avarice.1: Mention that avrdude can turn off the
	DWEN fuse.

2006-08-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	First part of implementing debugWire support.
	* src/main.cc: Implement the debugWire framework.
	* src/jtag.h: (Ditto.)
	* src/jtag2.h: (Ditto.)
	* src/jtag2io.cc: (Ditto.)
	* src/jtag2prog.cc: (Ditto.)
	* src/jtag2rw.cc: (Ditto.)
	* src/devdescr.cc: Add an entry for the ATmega48.
	* doc/avarice.1: Document the debugWire effort.
	* configure.ac: Bump version.

2006-07-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version.

2006-07-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: Fix various things in the device desriptors,
	mostly affecting devices with the new EEPROM register layout:
	. use correct (according to AVR Studio) EECRaddress
	. use correct start of SRAM for ATmegaxx0/1
	. add EINDaddr for ATmegaxx0/1

2006-05-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: Add ATmega2560/2561.

2006-05-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: Properly initialize the device_name member.
	* src/jtag1.h: (Ditto.)
	* src/jtag2.h: (Ditto.)
	* src/jtaggeneric.cc: (Ditto.)
	* src/main.cc: (Ditto.)

2006-04-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: fix ucAllowFullPageBitstream for AT90CAN128.

2006-04-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
