@@ -1,3 +1,8 @@
+2006-10-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* src/jtag2io.cc: Don't mess with the fuse or lock bits in
+	debugWire mode.
+
 2006-09-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	Implement basic soft BP support for debugWire:
